name:                tennis
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/duckmole/tennis#readme
license:             BSD3
license-file:        LICENSE
author:              Fabrice Nourisson
maintainer:          fabrice@nourisson-pytel.fr
copyright:           Copyright: (c) 2017 Fabrice Nourisson
category:            Dojo
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable tennis-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tennis
  default-language:    Haskell2010

test-suite tennis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tennis
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/duckmole/tennis
